--- a/butwehavethepower/index.html
+++ b/butwehavethepower/index.html
@@ -99,7 +99,7 @@
 
                 function update(line) {
                         updates = document.getElementById("lyrics");
-                        updates.innerHTML = "<p>" + line + "<p>";
+                        updates.innerHTML = "<p>" + line + "</p>";
 
                 }
 
