--- a/notuber/index.html
+++ b/notuber/index.html
@@ -13,10 +13,11 @@
 
         <div id="map"></div>
 
-        <script src="index.js"></script>
-        <script async
+
+        <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhmcEoJyaFofhQjuX3iSb_ZahXB2Ow3Ec&callback=initMap">
 </script>
+<script src="index.js"></script>
 
 </body>
 </html>
