--- a/notuber/dev versions/index.html
+++ b/notuber/dev versions/index.html
@@ -7,17 +7,15 @@
 
 </head>
 
-<body>
+<body onload="initMap()">
 
         <h1 id="title">Ride-Hailing Part 1</h1>
 
         <div id="map"></div>
 
 
-        <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhmcEoJyaFofhQjuX3iSb_ZahXB2Ow3Ec&callback=initMap">
-</script>
-<script src="index.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhmcEoJyaFofhQjuX3iSb_ZahXB2Ow3Ec"></script>
+        <script src="index.js"></script>
 
 </body>
 </html>
