--- a/notuber/dev versions/index.html
+++ b/notuber/dev versions/index.html
@@ -14,7 +14,7 @@
         <div id="map"></div>
 
 
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhmcEoJyaFofhQjuX3iSb_ZahXB2Ow3Ec"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhmcEoJyaFofhQjuX3iSb_ZahXB2Ow3Ec&libraries=geometry,places"></script>
         <script src="index.js"></script>
 
 </body>
