--- a/notuber/part 1/index.html
+++ b/notuber/part 1/index.html
@@ -7,15 +7,17 @@
 
 </head>
 
-<body onload="initMap()">
+<body>
 
         <h1 id="title">Ride-Hailing Part 1</h1>
 
         <div id="map"></div>
 
 
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhmcEoJyaFofhQjuX3iSb_ZahXB2Ow3Ec&libraries=geometry,places"></script>
-        <script src="index.js"></script>
+        <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhmcEoJyaFofhQjuX3iSb_ZahXB2Ow3Ec&callback=initMap">
+</script>
+<script src="index.js"></script>
 
 </body>
 </html>
