--- a/security/index.html
+++ b/security/index.html
@@ -8,11 +8,49 @@
         </head>
 
 	<body>
-                <h1>Security and Privacy Assessment</h1>
+                <h1 id="title">Security and Privacy Assessment</h1>
                 <h3>Introduction</h3>
+                        <p>Product is a ride-hailing service that is able to store and send passenger and vehicle data to clients. Uses Heroku and Heroku Postgres to deploy web app. I am hired to write this report on the security and privacy problems of this web app.</p>
                 <h3>Methodology</h3>
+                        <p>I mainly used curl on the command line and URL parameter manipulation.</p>
+                        <p>For curl, I tried feeding different strings into the username parameter since lat and lng are restricted to  floats. I used this to test routes that use HTTP POST.</p>
+                        <p>For URL manipulation, I also tried feeding strings to username param. I used this to test routes that use HTTP GET.</p>
                 <h3>Abstract of Findings</h3>
+                        <p>There are two main areas of security concerns. First the website is completely susceptible to attackers who are able to modify the website in anyway they like (redirect to other pages, show annoying messages, add/remove content) through Cross Site Scripting. An attacker can also crash the website.</p>
+                        <p>Second, an attacker can also hack into the databases linked to the webapp and retrieve, delete and modify information stored in those databases through SQL injection. This is very concerning especially if there will be sensitive information stored in those databases (passwords, financial information etc.)</p>
                 <h3>Issues Found</h3>
+                        <ol>
+                                <li>SQL Injection</li>
+                                <p>Location: https://jordan-marsh.herokuapp.com/passenger.json</p>
+                                <p>Threat level: High. Attacker can possibly retrieve sensitive information or delete entire table.</p>
+                                <p>Description: Source code took url parameter  from user and directly used to build a SQL query without sanitization leading to possible injection. </p>
+                                <img src="sqli_source.png" alt="SQL Injection  at /passenger.json">
+                                <p>Attack: https://jordan-marsh.herokuapp.com/passenger.json?username=invalid'; DROP TABLE passengers --</p>
+                                <p>Proof: The website will lose functionality and all data in the passengers table will be lost. </p>
+                                <img src="sqli_web.png" alt="After SQL Injection">
+                                <p>Resolution: Santizie user input by escaping special characters such as single and double quotes before passing it into a query. Add usernameEntry = validator.escape(usernameEntry) after 1st line in the image.</p>
+
+                                <li>SQL Injection</li>
+                                <p>Location: https://jordan-marsh.herokuapp.com/vehicle.json</p>
+                                <p>Threat level: High. Attacker can possibly retrieve sensitive information or delete entire table.</p>
+                                <p>Description: Source code took url parameter  from user and directly used to build a SQL query without sanitization leading to possible injection. </p>
+                                <img src="sqli_vehicle.png" alt="SQL Injection  at /vehicle.json">
+                                <p>Attack: https://jordan-marsh.herokuapp.com/passenger.json?username=invalid'; DROP TABLE vehicles --</p>
+                                <p>Proof: The website will lose functionality and all data in the vehicle table will be lost. </p>
+                                <img src="sqli_web.png" alt="After SQL Injection">
+                                <p>Resolution: Santizie user input by escaping special characters such as single and double quotes before passing it into a query. Add usernameEntry = validator.escape(usernameEntry) after 1st line in the image.</p>
+
+                                <li>Cross Site Scripting (XSS)</li>
+                                <p>Location: https://jordan-marsh.herokuapp.com/rides</p>
+                                <p>Threat level: Medium. Attacker has the ability to change DOM but not as servere as SQL injection that can steal credentials.</p>
+                                <p>Description: User input is not sanitized before inserting into databse which in turn is treated as executable code at the main page.</p>
+                                <p>Attack: This embeds a youtube video on the main page</p>
+                                <p>curl --data 'username=&lt;iframe width=&quot;1424&quot; height=&quot;626&quot; src=&quot;https://www.youtube.com/embed/2k0SmqbBIpQ&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;&amp;lat=1&amp;lng=1' https://jordan-marsh.herokuapp.com/rides</p>
+                                <p>Proof:  </p>
+                                <img src="sqli_web.png" alt="After SQL Injection">
+                                <p>Resolution: The recommendations above should sanitize user input to the databse. Too err on the side of caution, add var sanitized_username = validator.espace(esult.rows[count].username);  below line 10 of app.get(/)</p>
+                        </ol>
                 <h3>Conclusion</h3>
+                        <p>In conclusion always sanitize user input by escaping them. This applies if more code needs to be added and more possible injection points are created.</p>
 	</body>
 </html>
